# TinySeq

./: CMakeLists.txt  DESIGN_NOTE.md  LICENSE  MEMO2.md  MOTIVATION.md  Makefile  README.md  SPECIFICATIONS.md  TINYSEQ.md  cmake_install.cmake  main-pico.c  main.c
linux/: .gitignore  Makefile  main.c  zfconf.h
macos/: .gitignore  Makefile
nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  configurations.xml
nbproject/private/: configurations.xml  private.xml
pic32mx.X/: .gitignore  Makefile  main-pic32mx.c  zfconf.h
pic32mx.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  configurations.xml  project.xml
pic32mx.X/nbproject/private/: private.xml
pico/: .gitignore  CMakeLists.txt  cmake_install.cmake  main-pico.c  zfconf.h
tinyseq/: tinyseq.c  tinyseq.h
xprintf/src/: xprintf.c  xprintf.h
zForth/: .gitignore
zForth/forth/: conv.c  core.c  dict.c  mandel.c  memaccess.c  misc.c  sample.zf  sample2.zf  tinyseq.zf
zForth/src/linux/: Makefile
zForth/src/pic32mx/: zfconf.h  zmain.c
zForth/src/pico/: zmain.c
zForth/src/zforth/: zforth.c  zforth.h  zmain.c
